codeB开发的一些内容

--- a/Index1.html
+++ b/Index1.html
@@ -10,5 +10,6 @@
     <header></header>
     <nav>导航开始 导航修改完成</nav>
     <section>内容区正在进行。。。。</section>
+    <section>codeB写了一部分代码在这里。。。想要共享</section>
 </body>
 </html>
